<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">M.B.M.</string>
    <string name="welcome">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="itemList_header">Items</string>
    <string name="datePicker_header">Creation date:</string>
    <string name="firstname_hint">First name</string>
    <string name="lastname_hint">Last name</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="item_title_hint">Enter a title.</string>
    <string name="item_content_hint">Enter item content.</string>
    <string name="item_title_label">Title</string>
    <string name="item_content_label">Content</string>
    <string name="item_cover_label">Cover</string>
    <string name="item_genre_label">Genre</string>
    <string name="item_icon_label">Icon</string>
    <string name="item_creation_date_label">Creation Date</string>
    <string name="item_details_label">Details</string>
    <string name="item_favorite_label">Favorite?</string>
    <string name="remember_me_label">Remember me?</string>
    <string name="item_type_label">Select a type.</string>
    <string name="login_in_link_label">Go back to login.</string>
    <string name="sign_up_link_label">Don\'t have an account? Sign up here!</string>
    <string name="enter_data_label">Enter your personal data.</string>
    <string name="enter_Login_label">Enter E-mail and password.</string>
    <string name="new_item">New Item</string>
    <string name="edit">Edit</string>
    <!-- <string name="search">Enter search filter.</string> -->
    <string name="menu">Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_item">Delete</string>
    <string name="dialog_header_delete">Delete this item?</string>
    <string name="dialog_header_logout">Do you really want to log out?</string>
    <string name="dialog_header_delete_all">Delete all items?</string>
    <string name="dialog_header_delete_selected">Delete selected items?</string>
    <string name="dialog_header_delete_account">Do you really want to delete your account?</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="save">Save</string>
    <string name="signup">Sign up</string>
    <string name="details_title">Title:</string>
    <string name="details_genre">Genre:</string>
    <string name="list_genre_label">Genre?</string>
    <string name="details_country_year">Country, Year:</string>
    <string name="details_author">Author:</string>
    <string name="details_publisher_edition">Publisher, Edition:</string>
    <string name="details_isbn">ISBN:</string>
    <string name="details_director">Director:</string>
    <string name="details_length">Length:</string>
    <string name="details_music">Music:</string>
    <string name="details_cast">Cast:</string>
    <string name="details_artist">Artist:</string>
    <string name="details_label">Label:</string>
    <string name="details_content_book">Content:</string>
    <string name="details_content_movie">Story:</string>
    <string name="details_content_music">Content/Track list:</string>
    <string name="details_rating">Rating:</string>
    <string name="details_format_tracks">Format, Number o Tracks:</string>

    <string-array name="item_types">
        <item>Album</item>
        <item>Book</item>
        <item>Movie</item>
    </string-array>

    <string name="item_got_it_label">Got it!</string>
    <string name="item_wish_list_label">Wish list</string>
    <string name="item_original_title_hint">Enter original title.</string>
    <string name="hello_world">Hello world!</string>
    <string name="progress_dialog_text">Requesting user access. Please wait...</string>
    <string name="progress_dialog_delete">Deleting account. Please wait...</string>
    <string name="passwords_not_identical">Passwords do not match.\nPlease confirm your password.</string>
    <string name="response_code_success">User registration successful.</string>
    <string name="response_code_delete_success">Account was deleted successfully.</string>
    <string name="response_code_empty_fields">Please fill in all fields.</string>
    <string name="response_code_invalid_data">Invalid user data.\nPlease try again.</string>
    <string name="response_code_invalid_email">Invalid E-mail.\nPlease try again.</string>
    <string name="response_code_no_email">No E-mail found.</string>
    <string name="response_code_fail">Failed to delete account.</string>
    <string name="response_code_no_post">ERROR while trying to connect to server!</string>

</resources>