<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/menu_newItem"
        android:icon="@drawable/ic_menu_add_light"
        android:title="@string/new_item"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_menu_edit_light"
        android:title="@string/edit"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_deleteAll"
        android:icon="@drawable/ic_menu_trash_light"
        android:title="@string/delete_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_dummyData"
        android:title="Create dummy data"
        app:showAsAction="never"/>

</menu>