<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_fragmentEditTitle_editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_title_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_type_label"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sp_fragmentEditTitle_itemType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_fragmentEditTitle_saveItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>