<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000022"
        android:orientation="vertical"
        android:paddingBottom="@dimen/custom_value_8dp"
        android:paddingLeft="@dimen/custom_value_8dp"
        android:paddingRight="@dimen/custom_value_8dp"
        android:paddingTop="@dimen/custom_value_8dp"
        tools:context=".fragments.LoginFragment" >

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/custom_value_24dp" >

            <TextView
                android:id="@+id/tv_fragmentLogin_signup_link"
                style="@style/textViewForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_fragmentLogin_forgotPassword"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_up_link_label" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/et_fragmentLogin_password"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/et_fragmentLogin_email"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_fragmentLogin_login"
                style="@style/buttonForm.textStyle.big"
                android:layout_below="@+id/et_fragmentLogin_password"
                android:text="@string/login" />

            <EditText
                android:id="@+id/et_fragmentLogin_email"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/tv_fragmentLogin_enterLogin"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tv_fragmentLogin_enterLogin"
                style="@style/textViewForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/et_fragmentLogin_email"
                android:layout_alignParentTop="true"
                android:text="@string/enter_Login_label" />

            <CheckBox
                android:id="@+id/cb_fragmentLogin_rememberMe"
                style="@style/textViewForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btn_fragmentLogin_login"
                android:layout_below="@+id/btn_fragmentLogin_login"
                android:button="@drawable/custom_checkbox"
                android:text="@string/remember_me_label" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>