<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000022"
        android:orientation="vertical"
        android:paddingBottom="@dimen/custom_value_8dp"
        android:paddingLeft="@dimen/custom_value_8dp"
        android:paddingRight="@dimen/custom_value_8dp"
        android:paddingTop="@dimen/custom_value_8dp"
        tools:context=".fragments.SignupFragment" >

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/custom_value_24dp" >

            <TextView
                android:id="@+id/tv_fragmentSignup_login_link"
                style="@style/textViewForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/login_in_link_label" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/custom_value_20dp" >

            <TextView
                android:id="@+id/tv_fragmentSignup_signUp"
                style="@style/textViewForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/et_fragmentSignup_firstname"
                android:layout_alignParentTop="true"
                android:text="@string/enter_data_label" />

            <EditText
                android:id="@+id/et_fragmentSignup_firstname"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/tv_fragmentSignup_signUp"
                android:hint="@string/firstname_hint"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/et_fragmentSignup_lastname"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/et_fragmentSignup_firstname"
                android:hint="@string/lastname_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_fragmentSignup_username"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/et_fragmentSignup_lastname"
                android:hint="@string/username_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_fragmentSignup_email"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/et_fragmentSignup_username"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_fragmentSignup_password"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/et_fragmentSignup_email"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <!-- <EditText
                android:id="@+id/et_fragmentSignup_confirmPassword"
                style="@style/editTextForm.textStyle.input"
                android:layout_below="@+id/et_fragmentSignup_password"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword" /> -->

            <Button
                android:id="@+id/btn_fragmentSignup_signup"
                style="@style/buttonForm.textStyle.big"
                android:layout_below="@+id/et_fragmentSignup_password"
                android:text="@string/signup" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>