<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/custom_value_48dp"
    android:background="#000022"
    android:clickable="true"
    android:orientation="horizontal"
    android:weightSum="3" >

    <ImageView
        android:id="@+id/iv_fragmentMenuBar_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/custom_value_8dp"
        android:layout_weight="1"
        android:contentDescription="@string/delete_item"
        android:src="@drawable/ic_menu_home_light" />

    <!-- <ImageView
        android:id="@+id/iv_fragmentMenuBar_search"
        android:layout_width="@dimen/custom_value_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/custom_value_8dp"
        android:layout_weight="1"
        android:contentDescription="@string/all_lists"
        android:src="@drawable/ic_menu_search_light" /> -->

    <ImageView
        android:id="@+id/iv_fragmentMenuBar_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/custom_value_8dp"
        android:layout_weight="1"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/ic_menu_settings_light" />

    <ImageView
        android:id="@+id/iv_fragmentMenuBar_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/custom_value_8dp"
        android:layout_weight="1"
        android:contentDescription="@string/logout"
        android:src="@drawable/ic_menu_logout_light" />

</LinearLayout>