<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000022"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_fragmentBasics_itemTitle"
        style="@style/editTextForm.textStyle.input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/cb_fragmentBasics_itemFavorite"
        android:hint="@string/item_title_hint" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/sp_fragmentBasics_itemGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_fragmentBasics_itemTitle"
        android:layout_toLeftOf="@+id/cb_fragmentBasics_gotIt" />

    <CheckBox
        android:id="@+id/cb_fragmentBasics_gotIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cb_fragmentBasics_wishList"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_fragmentBasics_itemTitle"
        android:button="@drawable/custom_checkbox"
        android:text="@string/item_got_it_label"
        android:textColor="#ffffff" />

    <CheckBox
        android:id="@+id/cb_fragmentBasics_wishList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cb_fragmentBasics_gotIt"
        android:button="@drawable/custom_checkbox"
        android:text="@string/item_wish_list_label"
        android:textColor="#ffffff" />

    <Spinner
        android:id="@+id/sp_fragmentBasics_itemCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/sp_fragmentBasics_itemGenre"
        android:layout_below="@+id/sp_fragmentBasics_itemGenre" />

    <Spinner
        android:id="@+id/sp_fragmentBasics_itemYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/sp_fragmentBasics_itemCountry"
        android:layout_below="@+id/sp_fragmentBasics_itemCountry" />

    <EditText
        android:id="@+id/et_fragmentBasics_itemOriginalTitle"
        style="@style/editTextForm.textStyle.input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sp_fragmentBasics_itemYear"
        android:hint="@string/item_original_title_hint" />

    <EditText
        android:id="@+id/et_fragmentBasics_itemContent"
        style="@style/editTextForm.textStyle.input"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rb_fragmentBasics_itemRating"
        android:ems="16"
        android:hint="@string/item_content_hint"
        android:inputType="textMultiLine"
        android:textSize="13sp" />

    <CheckBox
        android:id="@+id/cb_fragmentBasics_itemFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_fragmentBasics_itemTitle"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/et_fragmentBasics_itemTitle"
        android:button="@drawable/custom_checkbox" />

    <RatingBar
        android:id="@+id/rb_fragmentBasics_itemRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_fragmentBasics_itemOriginalTitle"
        android:layout_centerHorizontal="true"
        android:numStars="5" />

</RelativeLayout>